--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "appslabke/lara-izitoast": "^1.1",
         "guzzlehttp/guzzle": "^7.2",
         "jenssegers/agent": "^2.6",
+        "kreait/firebase-php": "^7.0",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
